--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MenuMainActivity"
-            android:label="@string/title_activity_menu_main"></activity>
+            android:label="@string/title_activity_menu_main" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
