--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".ServiciosActivity"
+            android:label="@string/title_activity_servicios"></activity>
+            <!--android:theme="@style/AppTheme.NoActionBar"-->
+        <activity
+            android:name=".EstadisticasActivity"
+            android:label="@string/title_activity_estadisticas"/>
+        <activity
+            android:name=".RecompensasActivity"
+            android:label="@string/title_activity_recompensas"/>
+        <activity
             android:name=".MenuMainActivity"
             android:label="@string/title_activity_menu_main" />
         <activity android:name=".MainActivity">
