--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="idnp.app.bicikm">
+
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.INTERNET" />
-
 
     <application
         android:allowBackup="true"
@@ -14,20 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity
-            android:name=".ServiciosActivity"
-            android:label="@string/title_activity_servicios"></activity>
-            <!--android:theme="@style/AppTheme.NoActionBar"-->
-        <activity
-            android:name=".EstadisticasActivity"
-            android:label="@string/title_activity_estadisticas"/>
-        <activity
-            android:name=".RecompensasActivity"
-            android:label="@string/title_activity_recompensas"/>
-        <activity
-            android:name=".MenuMainActivity"
-            android:label="@string/title_activity_menu_main" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -35,12 +22,27 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".ServiciosActivity"
+            android:label="@string/title_activity_servicios" /> <!-- android:theme="@style/AppTheme.NoActionBar" -->
+        <activity
+            android:name=".EstadisticasActivity"
+            android:label="@string/title_activity_estadisticas" />
+        <activity
+            android:name=".RecompensasActivity"
+            android:label="@string/title_activity_recompensas" />
+        <activity
+            android:name=".MenuMainActivity"
+            android:label="@string/title_activity_menu_main" />
+        <activity android:name=".MainActivity">
+
+        </activity>
+
         <service android:name=".MyFirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
     </application>
 
 </manifest>
