--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,15 +15,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
+        <activity
+            android:name=".EstadisticasMapa"
+            android:label="@string/title_activity_estadisticas_mapa"></activity>
 
-        <!--
-     The API key for Google Maps-based APIs.
--->
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
+        <!--      The API key for Google Maps-based APIs. -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAZTcFyPGvj6_O5Tf3hxqG1-0jCTKRHdcQ" />
-
 
         <activity android:name=".MenuMainActivity">
             <intent-filter>
@@ -32,7 +34,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ServiciosActivity"
             android:label="@string/title_activity_servicios" /> <!-- android:theme="@style/AppTheme.NoActionBar" -->
@@ -45,9 +46,7 @@
         <activity
             android:name=".Login"
             android:label="@string/title_activity_menu_main" />
-        <activity android:name=".MainActivity">
-
-        </activity>
+        <activity android:name=".MainActivity"></activity>
 
         <service android:name=".MyFirebaseMessagingService">
             <intent-filter>
