--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,28 +9,29 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".Estadisticas.EstadisticasMapa"
-            android:label="@string/title_activity_estadisticas_mapa"></activity>
+            android:label="@string/title_activity_estadisticas_mapa" />
 
         <uses-library
             android:name="org.apache.http.legacy"
-            android:required="false" />
-        <!--      The API key for Google Maps-based APIs. -->
+            android:required="false" /> <!-- The API key for Google Maps-based APIs. -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAZTcFyPGvj6_O5Tf3hxqG1-0jCTKRHdcQ" />
 
-        <activity android:name=".Inicio.MenuMainActivity">
-        <activity android:name=".Login" android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".Inicio.MenuMainActivity" />
+        <activity
+            android:name=".Login"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -46,10 +47,7 @@
         <activity
             android:name=".Recompensas.RecompensasActivity"
             android:label="@string/title_activity_recompensas" />
-        <activity
-            android:name=".Login"
-            android:label="@string/title_activity_menu_main" />
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
 
         <service android:name=".MyFirebaseMessagingService">
             <intent-filter>
